@@ -3,16 +3,17 @@ import logging
 from core.feature.unpaid_invoice_handle.actions import UnpainInvoiceAction
 from core.feature.unpaid_invoice_handle.command import UnpaidInvoiceHandlerCommand
 from core.models import Invoice
+from core.utils.date_utils import current_localtime
 from yuyu import settings
 
 LOG = logging.getLogger("yuyu")
 
 class UnpaidInvoiceEventHandler:
     filter_action = [
-        UnpainInvoiceAction.STOP_INSTANCE,
-        UnpainInvoiceAction.SUSPEND_INSTANCE,
-        UnpainInvoiceAction.PAUSE_INSTANCE,
-        UnpainInvoiceAction.DELETE_INSTANCE,
+        UnpainInvoiceAction.STOP_INSTANCE.value,
+        UnpainInvoiceAction.SUSPEND_INSTANCE.value,
+        UnpainInvoiceAction.PAUSE_INSTANCE.value,
+        UnpainInvoiceAction.DELETE_INSTANCE.value,
     ]
 
     def filter_event_project_id(event_type, raw_payload):
@@ -36,6 +37,11 @@ class UnpaidInvoiceEventHandler:
     def handle(self, event_type, raw_payload):
         try:
             LOG.exception("Processing Unpaid Invoice Event")
+            
+            if not hasattr(settings, 'UNPAID_INVOICE_HANDLER_CONFIG'):
+                LOG.exception("Missing UNPAID_INVOICE_HANDLER_CONFIG in settings")
+                return
+            
             schedule_config = settings.UNPAID_INVOICE_HANDLER_CONFIG
             command = UnpaidInvoiceHandlerCommand()
             project_id = self.filter_event_project_id(event_type, raw_payload)
@@ -48,7 +54,7 @@ class UnpaidInvoiceEventHandler:
                 if unpaid_invoice:
                     # Calculate Days
                     # Find last config that has beed runned in past days
-                    date_diff = timezone.now() - unpaid_invoice.end_date
+                    date_diff = current_localtime() - unpaid_invoice.end_date
                     past_day = date_diff.days
                     for config in schedule_config:
                         if config['action'] not in self.filter_action:
