@@ -4,7 +4,7 @@ pytz==2021.1
 sqlparse==0.4.1
 oslo.messaging>=12.8.0
 django-money==2.0.1
-openstacksdk==0.103.0
+openstacksdk==2.0.0
 djangorestframework==3.12.4
 django-filter==2.4.0
 Markdown==3.3.4
